
[B]7.1.1 (2025.02.02)[/B]
- Improved progress icons and labels.
- Improved playback progress tracking.
- Improved activity interactions for shows.
- Improved Arrivals menu for season releases.
- Improved sorting for subsequent seasons.
- Improved rewatch tracking.
- Fixed Quick menu duplicates.
- Changed label formatting setting.
- Changed default label attribute.
- Added Arctic Reloaded as known skin.
- Added Arctic Resurrection as known skin.
- Added label progress format setting.
- Added label rating format setting.
- Added separate details settings for menus.
- Added a new label settings category.
- Rearrange menus, labels, and interface settings.
- Added future episode label color setting.
- Faster switch from rating dialog to binge dialog.

[B]7.1.0 (2025.01.28)[/B]
- Fixed custom playback process parameters.
- Fixed internal menu caching.
- Fixed show pack retrieval.
- Added TorBox support for ResolveURL.
- Added TorBox support for Orion.
- Added EasyDebrid support for Orion.
- Improved debrid resolving through Orion.
- Improved Orion authentication process.
- Added Orion debrid account settings.

[B]7.0.10 (2025.01.20)[/B]
- Improved Arrivals smart-loading.
- Added settings for menu icons.

[B]7.0.9 (2025.01.16)[/B]
- Improved year validation during scraping.
- Improved title validation during scraping.
- Improved show number extraction.
- Improved anime file name validation.
- Added new anime number extraction rules.
- Improved various scraping validation rules.
- Changed Knaben provider main domain.

[B]7.0.8 (2025.01.13)[/B]
- Fixed some pack numbering issues.
- Fixed startup service delay.
- Improved arrivals sorting.
- Decreased progress ending percentages.
- Updated progress menu activity indicators.

[B]7.0.7 (2025.01.10)[/B]
- Increased metadata refresh interval.
- Adjusted playback percentages in Progress menus.
- Fixed show menus for skin widgets.
- Fixed absolute menu paging.

[B]7.0.6 (2025.01.07)[/B]
- Fixed episode labels in Arrivals menus.