@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.gaia" version="7.1.1" name="Gaia" provider-name="Gaia">
+<addon id="plugin.video.gaia" version="7.1.2" name="Gaia" provider-name="Gaia">
 	<requires>
 		<import addon="xbmc.python" version="3.0.0" />
 
 		<import addon="script.gaia.resources" version="7.1.0" />
-		<import addon="script.gaia.externals" version="7.0.0" />
+		<import addon="script.gaia.externals" version="7.1.2" />
 
 		<import addon="script.gaia.metadata" version="7.0.0" optional="true" />
 		<import addon="script.gaia.binaries" version="7.0.0" optional="true" />
