@@ -1,28 +1,28 @@
 {
 	"plugin.video.gaia":
 	{
-		"version": "7.1.1",
-		"time": 1738489900,
+		"version": "7.1.2",
+		"time": 1738578350,
 		"size":
 		{
-			"compressed": 7692876,
-			"uncompressed": 40891988
+			"compressed": 7694225,
+			"uncompressed": 40898539
 		}
 	},
 	"script.gaia.externals":
 	{
-		"version": "7.0.0",
-		"time": 1738489900,
+		"version": "7.1.2",
+		"time": 1738578350,
 		"size":
 		{
-			"compressed": 40614057,
-			"uncompressed": 203430888
+			"compressed": 40614290,
+			"uncompressed": 203430992
 		}
 	},
 	"script.gaia.resources":
 	{
 		"version": "7.1.0",
-		"time": 1738489900,
+		"time": 1738578350,
 		"size":
 		{
 			"compressed": 50275141,
@@ -32,7 +32,7 @@
 	"script.gaia.metadata":
 	{
 		"version": "7.0.0",
-		"time": 1738489900,
+		"time": 1738578350,
 		"size":
 		{
 			"compressed": 98505033,
@@ -63,7 +63,7 @@
 	"script.gaia.binaries":
 	{
 		"version": "7.0.0",
-		"time": 1738489900,
+		"time": 1738578350,
 		"size":
 		{
 			"compressed": 21689972,
@@ -73,7 +73,7 @@
 	"script.gaia.icons":
 	{
 		"version": "7.0.0",
-		"time": 1738489900,
+		"time": 1738578350,
 		"size":
 		{
 			"compressed": 91285956,
@@ -83,7 +83,7 @@
 	"script.gaia.skins":
 	{
 		"version": "7.0.0",
-		"time": 1738489900,
+		"time": 1738578350,
 		"size":
 		{
 			"compressed": 36092607,
@@ -93,7 +93,7 @@
 	"repository.gaia.full":
 	{
 		"version": "7.0.0",
-		"time": 1738489900,
+		"time": 1738578350,
 		"size":
 		{
 			"compressed": 583223,
@@ -103,7 +103,7 @@
 	"repository.gaia.core":
 	{
 		"version": "7.0.0",
-		"time": 1738489900,
+		"time": 1738578350,
 		"size":
 		{
 			"compressed": 583102,
